--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.3",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
     "mongoose": "^5.0.17",
+    "optimist": "^0.6.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "scripts": {
     "build": "cd frontend; jekyll build; cd ../ ;"
