BUG: changing the user in the URL bar causes server to crash

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "socket.io": "^2.1.0"
   },
   "scripts": {
-    "build": "cd frontend; jekyll build; cd ../ ;"
+    "build": "cd frontend; jekyll build; cd ../ ;",
+    "start": "nodemon"
   }
 }
