bad request termination and https option

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "build": "cd frontend; jekyll build; cd ../ ;",
-    "start": "nodemon"
+    "start": "nodemon",
+    "sstart": "nodemon --sslkey /etc/letsencrypt/live/project.ymostofi.xyz/privkey.pem --sslcert /etc/letsencrypt/live/project.ymostofi.xyz/cert.pem"
   }
 }
