--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "build": "cd frontend; jekyll build; cd ../ ;",
-    "start": "nodemon",
-    "sstart": "nodemon --sslkey=/etc/letsencrypt/live/project.ymostofi.xyz/privkey.pem --sslcert=/etc/letsencrypt/live/project.ymostofi.xyz/cert.pem"
+    "start": "nodemon index.js",
+    "sstart": "nodemon index.js --sslkey=/etc/letsencrypt/live/project.ymostofi.xyz/privkey.pem --sslcert=/etc/letsencrypt/live/project.ymostofi.xyz/cert.pem"
   }
 }
