--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http": "^0.0.0",
     "https": "^1.0.0",
     "mongoose": "^5.0.17",
+    "node-cmd": "^3.0.0",
     "optimist": "^0.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
