--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "fs": "^0.0.1-security",
     "http": "^0.0.0",
     "https": "^1.0.0",
+    "method-override": "^2.3.10",
     "mongoose": "^5.0.17",
     "node-cmd": "^3.0.0",
     "optimist": "^0.6.1",
@@ -19,6 +23,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pty": "^0.0.0",
+    "q": "^1.5.1",
     "socket.io": "^2.1.0"
   },
   "scripts": {
