--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,14 @@
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "child-process": "^1.0.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "fs": "^0.0.1-security",
     "http": "^0.0.0",
     "https": "^1.0.0",
+    "json": "^9.0.6",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.17",
     "node-cmd": "^3.0.0",
