--- a/web/frontend/_config.yml
+++ b/web/frontend/_config.yml
@@ -18,7 +18,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Learn Linux and C fundamentals with minimal setup, all on this project!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://project.ymostofi.xyz" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://project.ymostofi.xyz/challenges" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ymostofi
 github_username:  ShanTulshi
 
