--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^5.0.17",
     "node-cmd": "^3.0.0",
+    "nodemon": "^1.17.4",
     "optimist": "^0.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
